<?xml version="1.0"?>
<package>
  <name>rover5</name>
  <version>0.0.0</version>
  <description>The rover5 package</description>

  <maintainer email="balto@todo.todo">balto</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <export>
  </export>
</package>
